# opp

./: .gitignore  .test.sh  .wezterm.lua  LICENSE  README.md  devenv.nix  devenv.yaml  import matplotlib.py  keyboard map.aup3  main.py  mono.py  pyproject.toml  shell.nix  tempCodeRunnerFile.py  test.py
.github/: pull_request_template.md
.github/workflows/: build.yaml  test.yaml
app/: __init__.py  __main__.py
app/api/v1/: audio.py  auth.py  sync.py
app/core/: audio.py  config.py  constants.py  old.py  predict.py  process.py  record.py  train.py
app/core/old/: old_main.py
app/core/old/utils/: visualizer.py
app/utils/: __init__.py  converter.py  model.py  processor.py  recorder.py  sound.py
app/worker/: __init__.py  celery.py
backend/: .gitignore  TODO.md  pyproject.old.toml  pyproject.toml
backend/app/: __init__.py  __main__.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  session.py  sync.py
backend/app/core/: __init__.py  audio.py  config.py  constants.py  processor.py  supabase.py
backend/app/core/old/: test.py
backend/app/core/old/utils/: recorder.py
backend/app/models/: __init__.py  profile.py  session.py
backend/app/schemas/: __init__.py  audio.py  auth.py  register.py  session.py  status.py  sync.py
backend/app/services/audio/: processor.py
backend/app/supabase/: session.py
backend/app/utils/: __init__.py  general.py
backend/app/worker/: __init__.py  add.py
backend/scripts/: run_supabase.sh
backend/supabase/: config.toml
backend/supabase/dev/migrations/: 20250518142220_create_profiles_table.sql
backend/supabase/test/: config.toml  migrations
backend/tests/: conftest.py  settings.py
backend/tests/app/: test_math.py
backend/tests/app/api/v1/: test_auth.py  test_products.py
backup/backend/: .env.example  .envrc  .gitignore  .test.sh  devenv.nix  devenv.yaml
backup/backend/app/api/v1/: __init__.py  auth.py  session.py  status.py
backup/backend/app/core/: __init__.py  celery.py  config.py
backup/backend/app/models/: session.py
backup/backend/app/schemas/: session.py
backup/backend/app/workers/: __init__.py
backup/backend/scripts/: extract_supabase_key.sh
backup/backend/supabase/dev/: config.toml
backup/backend/supabase/dev/migrations/: 20250518143002_create_sessions_table.sql
backup/backend/tests/: conftest.py  settings.py
backup/backend/tests/app/api/v1/: test_health.py  test_session.py
backup/backend/tests/plugins/: env_vars.py
backup/backup/: cuda.py  hello-pygame.py  hello_pygame.py  isolate.py  main.py  predict.exp.py  predict.gg.py  predict.old.py  predict.old_ok.py  predict.onxx.py  predict.py  predict.tui.py  record_old.py  train.kfold.py  train.old.py  train.sh  transparency-test.py  tutorial.py
backup/web/: .gitignore  eslint.config.mjs  nuxt.config.ts  playwright.config.ts  prettier.config.mjs  vitest.config.ts
backup/web/tests/e2e/: example.spec.ts
frontend/: eslint.config.mjs  nuxt.config.ts  package.json
frontend/app/: app.vue
supabase/: config.toml
tests/: conftest.py
tests/app/api/v1/: test_products.py
