[tool.poetry]
name = "operation-pele-password"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Rami && Bachir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
pip = "^25.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
