[tool.poetry]
name = "operation-pele-password"
version = "0.1.0"
description = "Keyboard evesdropping"
authors = ["Rami && Bachir"]
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.14.1"
pydantic = "^2.11.2"
pydantic-settings = "^2.8.1"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
pydub = "^0.25.1"
sounddevice = "^0.5.1"

[tool.poetry.group.dev.dependencies]
colorlog = "^6.9.0"
coverage = "^7.8.0"
pytest = "^8.3.5"
python-dotenv = "^1.1.0"
pre-commit = "^4.2.0"
black = "^25.1.0"

[tool.taskipy.tasks]
start = "python -m app"
test = "pytest tests/"
lint = "pre-commit run --all-files"

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
