[project]
name = "opp"
version = "0.1.0"
description = "Backend of opp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "poethepoet>=0.34.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "redis>=5.3.0",
    "supabase>=2.15.1",
]

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "coverage>=7.8.0",
    "pytest>=8.3.5",
]

[tool.poe.tasks]
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
api = "python -m app"
supabase = "supabase start"
celery = "celery -A app.worker.celery worker --loglevel=info"
flower = "celery -A app.worker.celery flower --port=5555"
