[project]
name = "opp"
version = "0.1.0"
description = "Backend of opp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.2",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "poethepoet>=0.34.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "redis>=5.3.0",
    "sqlmodel>=0.0.24",
    "supabase>=2.15.1",
]

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.poe.tasks]
api = "python -m app"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
supabase = "./scripts/run_supabase.sh"
redis = "redis-server"
celery = "celery -A app.core.celery worker -l INFO"
flower = "celery -A app.core.celery flower --port=$FLOWER_PORT"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "S101"]
